--- a/mHap/Citation.html
+++ b/mHap/Citation.html
@@ -2281,11 +2281,11 @@ $(".main-container").removeClass("main-container").removeClass("container-fluid"
 <hr />
 <div id="citation" class="section level2">
 <h2>Citation</h2>
-<p>Zhiqiang Zhang#, Yuhao Dan#, Yaochen Xu, Franziska Michor, Xiaoqi Zheng* and Jiantao Shi* The DNA methylation Haplotype (mHap) format and mHapTools. (to be submitted)</p>
+<p>Zhiqiang Zhang#, Yuhao Dan#, Yaochen Xu, Franziska Michor, Jiarui Zhang, Xiaoqi Zheng* and Jiantao Shi* The DNA methylation Haplotype (mHap) format and mHapTools. (to be submitted)</p>
 </div>
 <div id="funding" class="section level2">
 <h2>Funding</h2>
-<p>This study is sponsored by the Shanghai Pujiang Program 20PJ1414700 and Hundred Talents Program of the Chinese Academy of Sciences.</p>
+<p>This study is supported by the Hundred Talents Program of the Chinese Academy of Sciences, the Shanghai Pujiang Program [20PJ1414700 to J.S.] and National Natural Science Foundation of China [61972257 to X.Z.].</p>
 </div>
 <div id="acknowledgements" class="section level2">
 <h2>Acknowledgements</h2>
