--- a/mHap/Installation.html
+++ b/mHap/Installation.html
@@ -2279,7 +2279,7 @@ $(".main-container").removeClass("main-container").removeClass("container-fluid"
 
 
 <hr />
-<p>mHapTools is written in c++ and depends on <a href="https://github.com/samtools/htslib">htslib</a> library. It has been tested on centOS and should support other Linux distributions as well.</p>
+<p>The source code of mHapTools is hosted in <a href="https://github.com/butyuhao/mHapTools">github</a>. It is written in c++ and depends on <a href="https://github.com/samtools/htslib">htslib</a> library. It has been tested on centOS and should support other Linux distributions as well.</p>
 <div id="prerequisites" class="section level2">
 <h2>Prerequisites</h2>
 <p>The mHaptools requires the following dependencies :</p>
