Script for building annotation file

--- a/mHap/AnnotationFiles.html
+++ b/mHap/AnnotationFiles.html
@@ -2331,7 +2331,7 @@ $(".main-container").removeClass("main-container").removeClass("container-fluid"
 <pre><code>python annotation_files.py -h
 usage: annotation_files.py [-h] --file FILE [--out OUT] [--mode MODE]
 
-A simple tool to convert fasta file to cytosine position file
+A simple tool to convert fasta file to cytosine position file (Python 3 is required.)
 
 optional arguments:
   -h, --help            show this help message and exit
