--- a/mHap/Manual.html
+++ b/mHap/Manual.html
@@ -2399,7 +2399,7 @@ Options:
 </tr>
 <tr class="even">
 <td align="right">nMR</td>
-<td align="center">the number of fully methylated reads among all reads defined by K4plus</td>
+<td align="center">the number of methylated reads among all reads defined by K4plus</td>
 </tr>
 </tbody>
 </table>
