--- a/index.html
+++ b/index.html
@@ -2285,7 +2285,8 @@ $(".main-container").removeClass("main-container").removeClass("container-fluid"
 </div>
 <div id="news" class="section level2">
 <h2>News</h2>
-<p><strong>08-Oct-2020</strong>: ​Collaborative research on multiple myeloma was accepted for publication in Blood.</p>
+<p><strong>14-Jun-2021</strong>: The mHapTools paper has been accepted for publication in Bioinformatics.</p>
+<p><strong>08-Oct-2020</strong>: Collaborative research on multiple myeloma was accepted for publication in Blood.</p>
 <p><strong>02-Oct-2018</strong>: US patent on cancer diagnosis added.</p>
 <p><strong>19-May-2018</strong>: Tools for DNA methylation haplotypes (mHaplotype) added.</p>
 <p><strong>09-Nov-2017</strong>: Network-based gene prioritization analysis with NetGPA.</p>
