--- a/mHap/Citation.html
+++ b/mHap/Citation.html
@@ -2281,7 +2281,7 @@ $(".main-container").removeClass("main-container").removeClass("container-fluid"
 <hr />
 <div id="citation" class="section level2">
 <h2>Citation</h2>
-<p>Zhiqiang Zhang#, Yuhao Dan#, Yaochen Xu, Franziska Michor, Jiarui Zhang, Xiaoqi Zheng* and Jiantao Shi* The DNA methylation Haplotype (mHap) format and mHapTools. (to be submitted)</p>
+<p>Zhiqiang Zhang#, Yuhao Dan#, Yaochen Xu, Jiarui Zhang, Xiaoqi Zheng* and Jiantao Shi* The DNA methylation Haplotype (mHap) format and mHapTools. (Accepted) Bioinformatics</p>
 </div>
 <div id="funding" class="section level2">
 <h2>Funding</h2>
