--- a/mHap/Citation.html
+++ b/mHap/Citation.html
@@ -2281,7 +2281,7 @@ $(".main-container").removeClass("main-container").removeClass("container-fluid"
 <hr />
 <div id="citation" class="section level2">
 <h2>Citation</h2>
-<p>Zhiqiang Zhang#, Yuhao Dan#, Yaochen Xu, Jiarui Zhang, Xiaoqi Zheng* and Jiantao Shi* The DNA methylation Haplotype (mHap) format and mHapTools. (Accepted) Bioinformatics</p>
+<p>Zhiqiang Zhang#, Yuhao Dan#, Yaochen Xu, Jiarui Zhang, Xiaoqi Zheng* and <strong>Jiantao Shi*</strong> The DNA methylation Haplotype (mHap) format and mHapTools. <em>Bioinformatics</em> 2021 <a href="https://pubmed.ncbi.nlm.nih.gov/34179956">[Pubmed]</a> <a href="https://jiantaoshi.github.io/Publications/Bioinformaitcs_2021.pdf">[Accepted Manuscript]</a> <a href="https://jiantaoshi.github.io/mHap/index.html">[Supporting Website]</a></p>
 </div>
 <div id="funding" class="section level2">
 <h2>Funding</h2>
