--- a/mHap/TestDataSets.html
+++ b/mHap/TestDataSets.html
@@ -2330,9 +2330,9 @@ $(".main-container").removeClass("main-container").removeClass("container-fluid"
 </tr>
 <tr class="even">
 <td>mHap</td>
-<td><a href="http://bioinformatics.sibcb.ac.cn/dataupload/DataSets/DNAmethylation/HUES64/mHapTools/HUES64_BSMAP_SRX759486.mHap.gz">HUES64_BSMAP_mHap</a> <a href="http://bioinformatics.sibcb.ac.cn/dataupload/DataSets/DNAmethylation/HUES64/mHapTools/HUES64_BISMARK_SRX759486.mHap.gz">HUES64_BISMARK_mHap</a></td>
-<td><a href="http://bioinformatics.sibcb.ac.cn/dataupload/DataSets/DNAmethylation/HCT116/mHapTools/HCT116_BSMAP_SRX999983.mHap.gz">HCT116_BSMAP_mHap</a> <a href="http://bioinformatics.sibcb.ac.cn/dataupload/DataSets/DNAmethylation/HCT116/mHapTools/HCT116_BISMARK_SRX999983.mHap.gz">HCT116_BISMARK_mHap</a></td>
-<td><a href="http://bioinformatics.sibcb.ac.cn/dataupload/DataSets/DNAmethylation/ENCODE/ENCFF285ZGH.mHap.gz">Adrenal_Gland_mHap</a></td>
+<td><a href="http://bioinformatics.sibcb.ac.cn/dataupload/DataSets/DNAmethylation/HUES64/mHapTools/HUES64_BSMAP_SRX759486.mhap.gz">HUES64_BSMAP_mHap</a> <a href="http://bioinformatics.sibcb.ac.cn/dataupload/DataSets/DNAmethylation/HUES64/mHapTools/HUES64_BISMARK_SRX759486.mhap.gz">HUES64_BISMARK_mHap</a></td>
+<td><a href="http://bioinformatics.sibcb.ac.cn/dataupload/DataSets/DNAmethylation/HCT116/mHapTools/HCT116_BSMAP_SRX999983.mhap.gz">HCT116_BSMAP_mHap</a> <a href="http://bioinformatics.sibcb.ac.cn/dataupload/DataSets/DNAmethylation/HCT116/mHapTools/HCT116_BISMARK_SRX999983.mhap.gz">HCT116_BISMARK_mHap</a></td>
+<td><a href="http://bioinformatics.sibcb.ac.cn/dataupload/DataSets/DNAmethylation/ENCODE/ENCFF285ZGH.mhap.gz">Adrenal_Gland_mHap</a></td>
 </tr>
 <tr class="odd">
 <td>CpG methylation (mHapTools)</td>
