AML pages updated

--- a/LSC/Citation.html
+++ b/LSC/Citation.html
@@ -255,7 +255,6 @@ div.tocify {
       <div id="menuItems">
         <a class="menuItem" href="GenomeWide.html">Discovery</a>
         <a class="menuItem" href="Focused.html">Validation</a>
-        <a class="menuItem" href="RainbowMouse.html">Gene expression</a>
         <a class="menuItem" href="MR.html">Integration</a>        
         <a class="menuItem" href="Download.html">Download</a>
         <a class="menuItem" href="Citation.html">Citation</a>
@@ -296,7 +295,7 @@ $(".main-container").removeClass("main-container").removeClass("container-fluid"
 </div>
 <div id="funding" class="section level2">
 <h2>Funding</h2>
-<p>FM is a recipient of a Clinician-Scientist Award from the Fonds de Recherche du Québec-Santé. JS is a recipient of the Hundred Talents Program Award of the Chinese Academy of Sciences. MJ is a recipient of a Cole Foundation doctoral scholarship. Work in the FM laboratory was supported by an operating grant from the Cancer Research Society (#23604) and grants from the Cole Foundation, Richard and Edith Strauss Foundation, and Jewish General Hospital Foundation (#706389).</p>
+<p>F.E.M. is a recipient of a Clinician-Scientist Award from the Fonds de Recherche du Québec-Santé. J.S. is a recipient of the Hundred Talents Program Award of the Chinese Academy of Sciences. M.J. is a recipient of a Cole Foundation doctoral scholarship and Lady Davis Institute/TD Bank Studentship Award. Work in the F.E.M. laboratory was supported by an operating grant from the Cancer Research Society (#23604) and grants from the Cole Foundation, Richard and Edith Strauss Foundation, and Jewish General Hospital Foundation. This work was supported by the Dana-Farber Cancer Institute Physical Science Oncology Center (NIH U54CA193461).</p>
 </div>
 
   </div> <!-- articleBandContent -->
