--- a/mhaptk/TestDataSets.html
+++ b/mhaptk/TestDataSets.html
@@ -246,7 +246,7 @@ div.tocify {
 <div id="rStudioHeader" class="alwaysShrunk">
   <div class="innards bandContent">
     <div>
-      <a class="productName" href="index.html">mHapTK</a>
+      <a class="productName" href="index.html">mHapTk</a>
       <div class="rStudio"><span class="light"> </span> <a href="https://jiantaoshi.github.io"><div class="logo"></div></a></div>
     </div>
 
