--- a/Software.html
+++ b/Software.html
@@ -357,7 +357,7 @@ $(".main-container").removeClass("main-container").removeClass("container-fluid"
 <td align="right">mHapTk</td>
 <td align="center">characterizing mHap patterns</td>
 <td align="center"><a href="https://github.com/CCCKW/mHapTk">[Github]</a></td>
-<td align="center"><a href="https://jiantaoshi.github.io/mHap/index.html">[Documentation]</a></td>
+<td align="center"><a href="https://jiantaoshi.github.io/mhaptk/index.html">[Documentation]</a></td>
 </tr>
 </tbody>
 </table>
