--- a/mhaptk/Installation.html
+++ b/mhaptk/Installation.html
@@ -298,7 +298,7 @@ $(".main-container").removeClass("main-container").removeClass("container-fluid"
 <li><a href="https://pypi.org/project/numpy/">numpy &gt;= 1.22.4</a></li>
 <li><a href="https://pypi.org/project/pandas/">pandas &gt;= 1.4.2</a></li>
 <li><a href="https://pypi.org/project/scipy/">scipy == 1.8.1</a></li>
-<li><a href="http://www.htslib.org/doc/tabix.html">pytabix == 0.1</a></li>
+<li><a href="https://pypi.org/project/pytabix/">pytabix == 0.1</a></li>
 <li><a href="https://pypi.org/project/seaborn/">seaborn == 0.11.2</a></li>
 <li><a href="https://pypi.org/project/tqdm/">tqdm == 4.64.0</a></li>
 </ul>
@@ -394,4 +394,3 @@ $(document).ready(function ()  {
 
 </body>
 </html>
-          
