--- a/cancermhaps/Normal.html
+++ b/cancermhaps/Normal.html
@@ -288,6 +288,8 @@ $(".main-container").removeClass("main-container").removeClass("container-fluid"
 
 
 <hr />
+<div id="normal-tissue-mhaps" class="section level2">
+<h2>Normal tissue mHaps</h2>
 <table>
 <colgroup>
 <col width="10%" />
@@ -1238,6 +1240,7 @@ $(".main-container").removeClass("main-container").removeClass("container-fluid"
 </tr>
 </tbody>
 </table>
+</div>
 
   </div> <!-- articleBandContent -->
 </div> <!-- pageContent -->
