--- a/index.html
+++ b/index.html
@@ -296,14 +296,13 @@ $(".main-container").removeClass("main-container").removeClass("container-fluid"
 </div>
 <div id="news" class="section level2">
 <h2>News</h2>
+<p><strong>29-Sep-2022</strong>: The mHapTk paper was accepted for publication in Bioinformatics.</p>
 <p><strong>28-Jan-2022</strong>: LUAD master regulator paper has been accepted for publication in Frontiers in Bioinformatics.</p>
 <p><strong>14-Jun-2021</strong>: The mHapTools paper has been accepted for publication in Bioinformatics.</p>
 <p><strong>08-Oct-2020</strong>: Collaborative research on multiple myeloma was accepted for publication in Blood.</p>
 <p><strong>02-Oct-2018</strong>: US patent on cancer diagnosis added.</p>
 <p><strong>19-May-2018</strong>: Tools for DNA methylation haplotypes (mHaplotype) added.</p>
-<p><strong>09-Nov-2017</strong>: Network-based gene prioritization analysis with NetGPA.</p>
 <p><strong>20-Sep-2017</strong>: Placenta paper Advance Online Publication (AOP).</p>
-<p><strong>22-Jul-2017</strong>: Personal webpages designed.</p>
 </div>
 
   </div> <!-- articleBandContent -->
