--- a/normalmhaps/GEX.html
+++ b/normalmhaps/GEX.html
@@ -289,8 +289,8 @@ $(".main-container").removeClass("main-container").removeClass("container-fluid"
 
 
 <hr />
-<div id="gene-expression-datasets" class="section level2">
-<h2>Gene expression datasets</h2>
+<div id="gene-expression" class="section level2">
+<h2>Gene expression</h2>
 <table>
 <colgroup>
 <col width="16%" />
@@ -304,7 +304,7 @@ $(".main-container").removeClass("main-container").removeClass("container-fluid"
 <th align="center">Name</th>
 <th align="center">Species</th>
 <th align="center">Type</th>
-<th align="center">Descriptiona</th>
+<th align="center">Description</th>
 <th align="center">Download</th>
 </tr>
 </thead>
@@ -350,6 +350,50 @@ $(".main-container").removeClass("main-container").removeClass("container-fluid"
 <td align="center">scRNA-seq</td>
 <td align="center">Stage-specific genes of human preimplantation embryos</td>
 <td align="center"><a href="http://bioinformatics.sibcb.ac.cn/dataupload/normalmhaps/Expression/Stage_specific_genes.xls">Stage_specific_genes.xls</a></td>
+</tr>
+<tr class="odd">
+<td align="center">high-methytion genes</td>
+<td align="center">Homo sapiens</td>
+<td align="center">scRNA-seq</td>
+<td align="center">Genes with high methylation in promoters in human preimplantation embryos</td>
+<td align="center"><a href="http://bioinformatics.sibcb.ac.cn/dataupload/normalmhaps/Expression/High-methytion_genes.xls">High-methytion_genes.xls</a></td>
+</tr>
+</tbody>
+</table>
+</div>
+<div id="miscellaneous" class="section level2">
+<h2>Miscellaneous</h2>
+<table>
+<colgroup>
+<col width="16%" />
+<col width="16%" />
+<col width="24%" />
+<col width="24%" />
+<col width="16%" />
+</colgroup>
+<thead>
+<tr class="header">
+<th align="center">Name</th>
+<th align="center">Species</th>
+<th align="center">Type</th>
+<th align="center">Description</th>
+<th align="center">Download</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="center">Enriched motifs</td>
+<td align="center">Homo sapiens</td>
+<td align="center">Motif discovery</td>
+<td align="center">Tissue type MHBs motif</td>
+<td align="center"><a href="http://bioinformatics.sibcb.ac.cn/dataupload/normalmhaps/Expression/Motif.xls">Motif.xls</a></td>
+</tr>
+<tr class="even">
+<td align="center">Distance of MHBs to DMRs</td>
+<td align="center">Homo sapiens</td>
+<td align="center">Mapping MHBs to nearest DMRs</td>
+<td align="center">Distance of MHBs to DMRs in human preimplantation embryos</td>
+<td align="center"><a href="http://bioinformatics.sibcb.ac.cn/dataupload/normalmhaps/Expression/MHB_distanceToDMR.xls">MHB_distanceToDMR.xls</a></td>
 </tr>
 </tbody>
 </table>
