--- a/normalmhaps/Regions.html
+++ b/normalmhaps/Regions.html
@@ -291,8 +291,8 @@ $(".main-container").removeClass("main-container").removeClass("container-fluid"
 <hr />
 <div id="dna-methylation-haplotype-blocks" class="section level2">
 <h2>DNA methylation haplotype blocks</h2>
-<div id="normal-tissues" class="section level3">
-<h3>Normal tissues</h3>
+<div id="normal-tissues-discovery" class="section level3">
+<h3>Normal tissues (Discovery)</h3>
 <table>
 <thead>
 <tr class="header">
@@ -386,6 +386,40 @@ $(".main-container").removeClass("main-container").removeClass("container-fluid"
 <td align="center">Thyroid gland</td>
 <td align="center">Homo sapiens</td>
 <td align="center"><a href="http://bioinformatics.sibcb.ac.cn/dataupload/normalmhaps/MHB/Thyroid_MHB.bed">Thyroid_MHB.bed</a></td>
+</tr>
+</tbody>
+</table>
+</div>
+<div id="normal-tissues-validation" class="section level3">
+<h3>Normal tissues (Validation)</h3>
+<table>
+<thead>
+<tr class="header">
+<th align="center">Tissue type</th>
+<th align="center">Species</th>
+<th align="center">MHB files</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="center">Adipose</td>
+<td align="center">Homo sapiens</td>
+<td align="center"><a href="http://bioinformatics.sibcb.ac.cn/dataupload/normalmhaps/MHB_val/Adipose_val_MHB.bed">Adipose_val_MHB.bed</a></td>
+</tr>
+<tr class="even">
+<td align="center">Heart</td>
+<td align="center">Homo sapiens</td>
+<td align="center"><a href="http://bioinformatics.sibcb.ac.cn/dataupload/normalmhaps/MHB_val/Heart_val_MHB.bed">Heart_val_MHB.bed</a></td>
+</tr>
+<tr class="odd">
+<td align="center">Liver</td>
+<td align="center">Homo sapiens</td>
+<td align="center"><a href="http://bioinformatics.sibcb.ac.cn/dataupload/normalmhaps/MHB_val/Liver_val_MHB.bed">Liver_val_MHB.bed</a></td>
+</tr>
+<tr class="even">
+<td align="center">Lung</td>
+<td align="center">Homo sapiens</td>
+<td align="center"><a href="http://bioinformatics.sibcb.ac.cn/dataupload/normalmhaps/MHB_val/Lung_val_MHB.bed">Lung_val_MHB.bed</a></td>
 </tr>
 </tbody>
 </table>
