--- a/Software.html
+++ b/Software.html
@@ -339,7 +339,7 @@ $(".main-container").removeClass("main-container").removeClass("container-fluid"
 <td align="right">mHapSuite</td>
 <td align="center">Java implementation of mHapTk</td>
 <td align="center"><a href="https://github.com/yoyoong/mHapSuite">[Github]</a></td>
-<td align="center"><a href="https://github.com/yoyoong/mHapSuite">[Documentation]</a></td>
+<td align="center"><a href="https://jiantaoshi.github.io/mhapsuite/index.html">[Documentation]</a></td>
 </tr>
 </tbody>
 </table>
