--- a/Software.html
+++ b/Software.html
@@ -290,12 +290,6 @@ $(".main-container").removeClass("main-container").removeClass("container-fluid"
 <div id="software-packages" class="section level2">
 <h2>Software packages</h2>
 <table>
-<colgroup>
-<col width="6%" />
-<col width="30%" />
-<col width="34%" />
-<col width="28%" />
-</colgroup>
 <thead>
 <tr class="header">
 <th align="right">Name</th>
@@ -305,18 +299,6 @@ $(".main-container").removeClass("main-container").removeClass("container-fluid"
 </tr>
 </thead>
 <tbody>
-<tr class="odd">
-<td align="right">NetGPA</td>
-<td align="center">Network-based gene prioritization analysis</td>
-<td align="center"><a href="https://github.com/JiantaoShi/NetGPA">[Github]</a></td>
-<td align="center"><a href="NetGPA_vignettes.html">[Documentation]</a></td>
-</tr>
-<tr class="even">
-<td align="right">NetORA</td>
-<td align="center">Network-based pathway over-representation analysis</td>
-<td align="center"><a href="https://github.com/JiantaoShi/NetORA">[Github]</a></td>
-<td align="center"><a href="NetORA_vignettes.html">[Documentation]</a></td>
-</tr>
 <tr class="odd">
 <td align="right">AMD</td>
 <td align="center">an Automated Motif Discovery Tool</td>
@@ -340,6 +322,18 @@ $(".main-container").removeClass("main-container").removeClass("container-fluid"
 <td align="center">Java implementation of mHapTk</td>
 <td align="center"><a href="https://github.com/yoyoong/mHapSuite">[Github]</a></td>
 <td align="center"><a href="https://jiantaoshi.github.io/mhapsuite/index.html">[Documentation]</a></td>
+</tr>
+<tr class="odd">
+<td align="right">TRAmHap</td>
+<td align="center">Prediction of gene expression by mHaps</td>
+<td align="center"><a href="https://github.com/SQ-Gao/TRAmHap">[Github]</a></td>
+<td align="center"><a href="https://github.com/SQ-Gao/TRAmHap">[Documentation]</a></td>
+</tr>
+<tr class="even">
+<td align="right">mHapBrowser</td>
+<td align="center">DNA Methylation Haplotype Browser</td>
+<td align="center"><a href="https://github.com/yoyoong/mHapBrowser">[Github]</a></td>
+<td align="center"><a href="http://mhap.sibcb.ac.cn/">[Documentation]</a></td>
 </tr>
 </tbody>
 </table>
