--- a/index.html
+++ b/index.html
@@ -293,12 +293,12 @@ $(".main-container").removeClass("main-container").removeClass("container-fluid"
 </div>
 <div id="news" class="section level2">
 <h2>News</h2>
+<p><strong>30-Sep-2023</strong>: The mHapBrowser was accepted for publication in <em>Nucleic Acids Research</em>.</p>
 <p><strong>03-Jun-2023</strong>: Collaborative research on CUP was accepted for publication in <em>Nature Communications</em>.</p>
 <p><strong>19-May-2023</strong>: The TRAmHap paper was accepted for publication in <em>Briefings in Bioinformatics</em>.</p>
 <p><strong>29-Sep-2022</strong>: The mHapTk paper was accepted for publication in <em>Bioinformatics</em>.</p>
 <p><strong>28-Jan-2022</strong>: LUAD master regulator paper has been accepted for publication in <em>Frontiers in Bioinformatics</em>.</p>
 <p><strong>14-Jun-2021</strong>: The mHapTools paper has been accepted for publication in <em>Bioinformatics</em>.</p>
-<p><strong>08-Oct-2020</strong>: Collaborative research on multiple myeloma was accepted for publication in <em>Blood</em>.</p>
 <p><strong>20-Sep-2017</strong>: Placenta paper Online in <em>Nature</em>.</p>
 </div>
 
