--- a/mcbtk/dataset.html
+++ b/mcbtk/dataset.html
@@ -251,6 +251,7 @@ div.tocify {
       <div id="menuToggler"></div>
       <div id="menuItems">
         <a class="menuItem" href="dataset.html">Datasets</a>        
+	<a class="menuItem" href="Manual.html">Manual</a>
         <a class="menuItem gitHub" href="https://github.com/JiantaoShi/JiantaoShi.github.io"></a>
       </div>
     </div>
