--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@ $(".main-container").removeClass("main-container").removeClass("container-fluid"
 <hr />
 <div id="research" class="section level2">
 <h2>Research</h2>
-<p>My name is Jiantao Shi. I am a Principal Investigator (PI) at Shanghai Institute of Biochemistry and Cell Biology (<a href="http://english.cemcs.cas.cn/">SIBCB</a>), Chinese Academy of Sciences (<a href="http://english.cas.cn/">CAS</a>). My team will be working on cancer genomics and epigenomics. We are interested in systematically charactering dynamics of DNA methylation landscapes during cancer initiation, progress, drug response and resistance. We are also dedicated to developing novel computational methods for non-invasive early cancer detection. I also run a bioinformatics core which support the integrative analysis of high through-put data in SIBCB.</p>
+<p>My name is Jiantao Shi. I am a Principal Investigator (PI) at Shanghai Institute of Biochemistry and Cell Biology (<a href="http://english.cemcs.cas.cn/">SIBCB</a>), Chinese Academy of Sciences (<a href="http://english.cas.cn/">CAS</a>). My team will be working on cancer genomics and epigenomics. We are interested in systematically charactering dynamics of DNA methylation landscapes during cancer initiation, progress, drug response and resistance. In addition, we are interestinged in developing novel computational methods for non-invasive early cancer detection. I also run a bioinformatics core which supports the integrative analysis of high through-put data in SIBCB.</p>
 </div>
 <div id="news" class="section level2">
 <h2>News</h2>
